kubernetes/apps/dev/temporal/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: temporal-ui
spec:
  hostnames: ["temporal.toskbot.xyz"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: temporal-web
          namespace: dev
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
